--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,11 +4,14 @@ $color-secondary: #461cdc;
 $color-tertiary: #000023;
 $color-quaternary: #ffffff;
 $color-text-primary: #ffffff;
-$color-text-secondary: #1b1b1b;
+$color-text-secondary: #292929;
 $color-text-error: #b90000;
+$color-text-info: #4b4b4b;
+$color-gradient: linear-gradient(135deg, #c8beff, #5e9eff, #1d0080, #aafcf8);
 
 // Tipografia
-$font-primary: 'Montserrat', sans-serif;
+$font-primary: 'Poppins', sans-serif;
+$font-secondary: 'Montserrat', sans-serif;
 $font-size-title: 2rem; // ~32px
 $font-size-subtitle: 1.5rem; // ~24px
 $font-size-body: 1rem; // ~16px
