🚧 (src/Form/RegisterForm): Incluindo campos no formulario de Registro

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -8,3 +8,12 @@
     flex-wrap: wrap;
     flex-direction: column;
 }
+
+.formRegister{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: $spacing-md;
+}
