--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -12,6 +12,7 @@
 .authGrid {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 100%;
   transition: flex-direction 0.6s ease-in-out;
 
@@ -47,6 +48,10 @@
   justify-content: space-around;
   height: 800px;
   width: 600px;
+}
+
+.formPanelSmall {
+  height: 450px;
 }
 
 .boxBtnAuth {
